--- a/app/views/dispatchers/eta.js.haml
+++ b/app/views/dispatchers/eta.js.haml
@@ -1,1 +1,3 @@
 = render 'update_eta'
+$("#run_trips_panel_#{@run.id} .eta_icon").toggleClass('fa-spin');
+$("#run_trips_panel_#{@run.id} .calculate_eta").toggleClass('link_disabled');
