--- a/app/views/runs/reload_drivers.js.erb
+++ b/app/views/runs/reload_drivers.js.erb
@@ -1,1 +1,1 @@
-$('#run_driver_id').replaceWith("<%= j collection_select(:run, :driver_id, @drivers, :id, :user_name, {include_blank: true}, {class: 'form-control'}) %>");
+$('#run_driver_id').replaceWith("<%= j collection_select(:run, :driver_id, @drivers, :id, :user_name, {include_blank: true, selected: params[:driver_id]}, {class: 'form-control'}) %>");
