--- a/app/views/runs/reload_vehicles.js.erb
+++ b/app/views/runs/reload_vehicles.js.erb
@@ -1,1 +1,1 @@
-$('#run_vehicle_id').replaceWith("<%= j collection_select(:run, :vehicle_id, @vehicles, :id, :name, {include_blank: true}, {class: 'form-control'}) %>");
+$('#run_vehicle_id').replaceWith("<%= j collection_select(:run, :vehicle_id, @vehicles, :id, :name, {include_blank: true, selected: params[:vehicle_id]}, {class: 'form-control'}) %>");
