--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,4 +27,5 @@
 @import "dispatch";
 @import "bootstrap-editable";
 @import "jquery.sumoselect";
-@import "jquery.splitter"
+@import "jquery.splitter";
+@import "bootstrap-toggle";
