--- a/app/views/recurring_dispatchers/_runs_table.html.haml
+++ b/app/views/recurring_dispatchers/_runs_table.html.haml
@@ -35,7 +35,7 @@
             = link_to edit_repeating_run_path(run, from_dispatch: true), style: 'padding-right: 5px;', title: 'Edit' do 
               %i.fa.fa-pencil
           - if can?(:cancel, run)
-            = link_to cancel_run_recurring_dispatchers_path(run_id: run.id), title: 'Cancel run', remote: true, data: {confirm: 'Are you sure to cancel this run?'} do 
+            = link_to cancel_run_recurring_dispatchers_path(run_id: run.id), title: 'Cancel run', remote: true, data: {confirm: run_cancel_warning(run)} do 
               %i.fa.fa-power-off
 
 :javascript
