change field name

--- a/app/views/provider_lookup_tables/_table.html.haml
+++ b/app/views/provider_lookup_tables/_table.html.haml
@@ -17,7 +17,7 @@
         = table.description_column_name.titleize
     - if table.name == 'vehicle_inspections'
       %th Flagged?
-      %th Mechnical?
+      %th Mechanical?
     - if table.name == 'funding_sources'
       %th NTD Reportable?
   %tbody
@@ -36,8 +36,8 @@
             = form_for item, url: mark_flagged_vehicle_inspection_path(item), remote: true, method: :patch do |f|
               = f.check_box :flagged, :onclick => "$(this).parents('form').submit()"
           %td 
-            = form_for item, url: mark_mechnical_vehicle_inspection_path(item), remote: true, method: :patch do |f|
-              = f.check_box :mechnical, :onclick => "$(this).parents('form').submit()"
+            = form_for item, url: mark_mechanical_vehicle_inspection_path(item), remote: true, method: :patch do |f|
+              = f.check_box :mechanical, :onclick => "$(this).parents('form').submit()"
         - if table.name == 'funding_sources'
           %td
             = form_for item, url: mark_ntd_reportable_funding_source_path(item), remote: true, method: :patch do |f|
