--- a/app/views/runs/_form.html.haml
+++ b/app/views/runs/_form.html.haml
@@ -33,7 +33,7 @@
   .col-sm-12.col-md-6
     = render 'repeating_runs/repetition_panel', f: f if @is_repeating_run
     = render 'runs/vehicle_panel', f: f , edit_mode: edit_mode
-    = render 'runs/driver_panel', f: f 
+    = render 'runs/driver_panel', f: f, edit_mode: edit_mode 
     = render 'runs/run_completion_panel', f: f, edit_mode: edit_mode if !@is_repeating_run
     - if edit_mode == :show
       - logs = TrackerActionLog.for(@run).order(created_at: :desc)
