--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <title>
     <%= content_for?(:title) ? yield(:title) : translate_helper("application_title") %>
   </title>
+  <link href="https://fonts.googleapis.com/css?family=Barlow:400,400i,600,600i,800&amp;subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css" integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= split_stylesheet_link_tag "v1_theme", :media => "all" %>
   <%= render 'shared/google_maps/google_map_api' %>
@@ -66,18 +69,19 @@
       </ul>
     </div><!-- /.wrap -->
   </div><!-- /#crossbar -->
-
-  <div id="main" class="row">
-    <div id="messages" class="wrap selfclear">
-      <% if notice %>
-        <p class="alert alert-info"><%= notice %></p>
-      <% end %>
-      <% if alert %>
-        <p class="alert alert-danger"><%= alert %></p>
-      <% end %>
+  <div class="main-wrapper">
+    <div id="main" class="row">
+      <div id="messages" class="wrap selfclear">
+        <% if notice %>
+          <p class="alert alert-info"><%= notice %></p>
+        <% end %>
+        <% if alert %>
+          <p class="alert alert-danger"><%= alert %></p>
+        <% end %>
+      </div>
+      <%= content_for?(:menu_bar) ? yield(:menu_bar) : '' %>
+      <%= yield %>
     </div>
-    <%= content_for?(:menu_bar) ? yield(:menu_bar) : '' %>
-    <%= yield %>
   </div>
 
   <%= render partial: 'layouts/footer' %>
