--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -39,6 +39,12 @@ $side-pad: 4rem;
   transform: $properties;
 }
 
+@mixin box-shadow($blur: .5rem, $opacity: 0.5, $color: $black) {
+	-webkit-box-shadow: 0px 0px $blur 0px rgba($color, $opacity);
+	-moz-box-shadow: 0px 0px $blur 0px rgba($color, $opacity);
+	box-shadow: 0px 0px $blur 0px rgba($color, $opacity);
+}
+
 @mixin vert-center {
 	position: relative;
   top: 50%;
@@ -77,6 +83,7 @@ body {
 #header {
 	background-color: $gray-3;
 	@include gradient-l-r($brand-color, $white, 1);
+	@include box-shadow;
 	padding: 0;
 	position: relative;
 	height: $header-height;
@@ -92,15 +99,15 @@ body {
 		left: 0;
 		bottom: 0;
 		height: 100%;
-		max-width: 50%;
+		// max-width: 50%;
 		&:hover {
 			color: $gray-3;
 		}
 
 		.logo, .name {
 			display: inline-block;
-			
 			padding: 0 $side-pad;
+			float: left
 		}
 		
 		.logo {
@@ -114,21 +121,62 @@ body {
 		}
 
 		.name {
-			font-size: 28px;
+			font-size: 32px;
 			@include vert-center;
 		}
 
 	}
 }
 
-#login-area {
+#user-nav {
 	color: $brand-color;
 	font-weight: 600;
-	// padding: 2em 3em;
+	display: inline-block;
+	float: right;
+	text-align: right;
+	padding: 1em $side-pad;
+	@include vert-center;
 	a {
 		color: currentColor;
+		font-size: 1.25em;
+		margin-left: .375em;
 	}
 
+	.current-provider {
+		display: block;
+		width: 100%;
+		margin-top: .75em;
+	}
+
+}
+
+#primary-nav {
+	margin: 0;
+	padding: 0;
+	li {
+		list-style: none;
+	  float: left;
+	  display: inline-block;
+	  margin-right: 2px;
+	  @include gradient-t-b($white,$gray-3,1);
+	  a {
+	  	padding: .5em 1em;
+	  	font-size: 15px;
+	  	font-weight: 600;
+	  	display: inline-block;
+	  	color: $brand-color;
+	  	background: transparent;
+	  	transition: .25s ease-in-out;
+	  	line-height: 1.4;
+	  	&.active {
+	  		background: $white;
+	  	}
+	  	&:hover {
+				background: $gray-4;
+				text-decoration: none;
+	  	}
+	  }
+	}
 }
 
 .main-wrapper {
