--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,29 +21,41 @@
     <%= translate_helper("session_timeout_warning") %>
   </div>
   <div id="header">
-    <div class="wrap selfclear">
       <%= translate_helper("header_content") %>
-      <div id="login-area">
-        <% if current_user %>
-          <a href=<%= user_path(current_user)%>><%= current_user.display_name %></a> 
-          <span class="separator">|</span> <%= link_to translate_helper("change_password"), show_change_password_path, :class=>'change-password' %>
-          <span class="separator">|</span>
-          <%= link_to translate_helper("log_out_link_text"), destroy_user_session_path(locale: I18n.default_locale), method: :delete %>
-          <span class="separator">|</span>
-          Logged in to 
-          <% if @provider_map.size > 1 %>
-            <%= form_tag change_provider_path %>
-              <select name="provider_id" onchange="form.submit();">
-                <%= options_for_select(@provider_map, selected = current_user.current_provider_id) %>
-              </select>
-              <%= hidden_field_tag "come_from", request.fullpath %>
-            </form>
-          <% else %>
-            <%= current_user.current_provider.name %>
+      <div id="user-nav">
+        <% if can_access_admin_tab(current_user) %>
+          <%= link_to admin_path, title: translate_helper("application_admin_link_text") do %>
+            <i class="fas fa-sliders-h"></i>
           <% end %>
         <% end %>
+        <% if can_access_provider_settings_tab(current_user, current_provider) %>
+          <%= link_to provider_path(current_user.current_provider), title: translate_helper("current_provider_settings_link_text") do %>
+            <i class="fas fa-cog"></i>
+          <% end %>
+        <% end %>
+        <% if current_user %>
+          <a href=<%= user_path(current_user)%> title="<%= current_user.display_name %>"><i class="fas fa-user-edit"></i></a>
+          <%= link_to show_change_password_path, title: translate_helper("change_password") do %>
+            <i class="fas fa-key"></i>
+          <% end %>
+          <%= link_to destroy_user_session_path(locale: I18n.default_locale), method: :delete, title: translate_helper("log_out_link_text") do %>
+            <i class="fas fa-sign-out-alt"></i>
+          <% end %>
+          <div class="current-provider">
+            Logged in to 
+            <% if @provider_map.size > 1 %>
+              <%= form_tag change_provider_path %>
+                <select name="provider_id" onchange="form.submit();">
+                  <%= options_for_select(@provider_map, selected = current_user.current_provider_id) %>
+                </select>
+                <%= hidden_field_tag "come_from", request.fullpath %>
+              </form>
+            <% else %>
+              <%= current_user.current_provider.name %>
+            <% end %>
+          </div>
+        <% end %>
       </div>
-    </div><!-- /.wrap -->
   </div><!-- /#header -->
 
   <div id="crossbar">
@@ -58,14 +70,6 @@
         <% if show_scheduling? %><li class="reports"><%= link_to translate_helper("application_reports_link_text"), reporting.reports_path %></li><% end %>
         <% if current_provider.try(:cab_enabled?) %><li class="cab_trips"><%= link_to translate_helper("application_cabs_link_text"), cab_trips_path %></li><% end %>
         <% if show_scheduling? %><li class="cad"><%= link_to translate_helper("application_cad_link_text"), ridepilot_cad_avl.cad_avl_path, target: :_blank %></li><% end %>
-      </ul>
-      <ul id="secondary-nav" class="selfclear">
-        <% if can_access_admin_tab(current_user) %>
-          <li class="admin"><%= link_to translate_helper("application_admin_link_text"), admin_path %></li>
-        <% end %>
-        <% if can_access_provider_settings_tab(current_user, current_provider) %>
-          <li class="provider"><%= link_to translate_helper("current_provider_settings_link_text"), provider_path(current_user.current_provider) %></li>
-        <% end %>
       </ul>
     </div><!-- /.wrap -->
   </div><!-- /#crossbar -->
