--- a/app/views/drivers/_address_panel.html.haml
+++ b/app/views/drivers/_address_panel.html.haml
@@ -2,15 +2,21 @@
 .panel.panel-primary
   .panel-heading= translate_helper("driver_address_heading")
   .panel-body.form-horizontal
-    = f.fields_for :address, @driver.address do |address_form|
-      = render 'addresses/non_geocoding_form_fields', address_form: address_form, readonly: @readonly
+    - if @readonly
+      = render 'plain_text_address', use_address: @driver.address
+    - else
+      = f.fields_for :address, @driver.address do |address_form|
+        = render 'addresses/non_geocoding_form_fields', address_form: address_form, readonly: @readonly
 
 - prefix = "driver_alt_address_attributes"
 .panel.panel-primary
   .panel-heading= translate_helper("driver_alt_address_heading")
   .panel-body.form-horizontal
-    = f.fields_for :alt_address, @driver.alt_address do |address_form|
-      = render 'addresses/non_geocoding_form_fields', address_form: address_form, readonly: @readonly
+    - if @readonly
+      = render 'plain_text_address', use_address: @driver.alt_address
+    - else
+      = f.fields_for :alt_address, @driver.alt_address do |address_form|
+        = render 'addresses/non_geocoding_form_fields', address_form: address_form, readonly: @readonly
 
 = render 'addresses/google_place_autocomplete_js'
 :javascript
