--- a/app/assets/stylesheets/v1_theme.scss
+++ b/app/assets/stylesheets/v1_theme.scss
@@ -278,15 +278,15 @@ body.reports #primary-nav li.provider a:hover, body.reports #primary-nav li.prov
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
-.alert {
-  font-size: 18px;
-  font-weight: bold;
-  padding: 10px;
-  line-height: 1.2;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
+// .alert {
+//   font-size: 18px;
+//   font-weight: bold;
+//   padding: 10px;
+//   line-height: 1.2;
+//   -webkit-border-radius: 5px;
+//   -moz-border-radius: 5px;
+//   border-radius: 5px;
+// }
 
 fieldset ol.section li div.field_with_errors {
   display: inline;
